[package]
name = "rs_proxy"
version = "0.1.0"
authors = ["gnieto <gnieto.talo@gmail.com>"]

[dependencies]
mio = "0.5"
bit-set = "0.4.0"
log = "0.3.6"
env_logger = "0.3.3"
netbuf = "0.3.1"
ansi_term = "0.7.2"
resp = {version = "0.3.5", optional = true}
httparse = {version = "1.1.2", optional = true}

[features]
default = ["redis", "http"]

redis = ["resp"]
http = ["httparse"]
